# haunted-by-the-light

./: .gitignore  README.md  build_linux.sh  build_win.ps1  pyproject.toml  requirements.txt
hbtl/: __main__.py  licenses.txt  light.py  max_jump.py  model.py  version.py
hbtl/assets/maps/: hbtl.tiled-session  misc.tsx  obsidian.tsx
hbtl/assets/maps/grass/: grass_1.tmj  grass_1.tmx  grass_10.tmj  grass_10.tmx  grass_2.tmj  grass_2.tmx  grass_4.tmj  grass_4.tmx  grass_5.tmj  grass_5.tmx  grass_6.tmj  grass_6.tmx  grass_7.tmj  grass_7.tmx  grass_8.tmj  grass_8.tmx  init_map.tmj  init_map.tmx
hbtl/assets/maps/ice/: ice_1.tmj  ice_1.tmx  ice_3.tmj  ice_3.tmx  ice_4.tmj  ice_4.tmx
hbtl/assets/maps/obsidian/: obsidian_1.tmj  obsidian_1.tmx  obsidian_2.tmj  obsidian_2.tmx  obsidian_3.tmj  obsidian_3.tmx
hbtl/assets/textures/: jump_hints.aseprite
hbtl/assets/textures/grass/: butterfly2_.aseprite  grass_tileset.aseprite
hbtl/assets/textures/ice/: ice_tileset.aseprite
hbtl/assets/textures/obsidian/: obsidian_tileset.aseprite
hbtl/assets/textures/slime/: slime_moving_.aseprite
hbtl/assets/textures/spectre/: spectre_moving_.aseprite
